[package]
name = "denso"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"
license = "MIT"
authors = ["pleme-io"]
repository = "https://github.com/pleme-io/denso"
homepage = "https://github.com/pleme-io/denso"
description = "Wireless ADB manager"

[[bin]]
name = "denso"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[lints.clippy]
pedantic = "warn"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
